# BasicTrafficSimulation

./: .gitignore  LICENSE  README.md
.github/workflows/: build_example_app_ubuntu.yml  build_example_app_windows.yml  build_tsblib.yml  build_tsblib_ubuntu.yml  build_tsblib_windows.yml
example/: TrafficSimulationBasic.pro  checkerboard.cpp  globals.cpp  globals.h  main.cpp  main.qml  obstacles.cpp  simulation.cpp  simulation.h  simulationdata.h  simulationview.cpp  simulationview.h  tslib.pri
tsblib/: CMakeLists.txt  generate_solution_VS2019.cmd  generate_solution_VS2022.cmd
tsblib/include/tslib/: api.h  types.h
tsblib/source/: api.cpp  base.h  globals.h  metrics.h  simulation.cpp  simulation.h  simulation_knospe.cpp  simulation_knospe.h  simulation_nasch.cpp  simulation_nasch.h  types.cpp  types_private.h
tsblib/source/helpers/: helper_math.cpp  helper_math.h
tsblib/tests/: basic.cpp  main.cpp
